multiselect initial files

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
 <h1>
   {{title}}
 </h1>
+<select name="select-name">
+  <option value="">pick one</option>
+  <option value="1">item 1</option>
+  <option value="2">item 2</option>
+  <option value="3">item 3</option>
+</select>
+<app-multiselect></app-multiselect>
