--- a/src/app/grid/grid.component.html
+++ b/src/app/grid/grid.component.html
@@ -1,3 +1,3 @@
 <div class="row">
-  <app-griditem class="col-lg-4" *ngFor="let item of items"></app-griditem>
+  <app-griditem class="col-lg-4" *ngFor="let item of items" [item]="item"></app-griditem>
 </div>
